fix: change scrollbar behavior #113

--- a/src/features/VisualNovel/pages/VisualNovelPage/VisualNovelPage.module.css
+++ b/src/features/VisualNovel/pages/VisualNovelPage/VisualNovelPage.module.css
@@ -1,10 +1,6 @@
-/*
- * TODO (Sotnichenko): Adopt scrollbar library
- * Nearly all sub routes make page scrollable,
- * so to prevent screen size flicking we add scrollbar for all pages.
- */
 html {
-  overflow-y: scroll;
+  overflow-y: auto;
+  scrollbar-gutter: stable;
 }
 
 .page {
